Removed right toolbar

--- a/src/htmlContent/main-view.html
+++ b/src/htmlContent/main-view.html
@@ -84,7 +84,7 @@
 
     </div>
 
-    <!-- Vertical toolbar docked to right -->
+    <!-- Vertical toolbar docked to right
     <div id="main-toolbar" class="toolbar no-focus collapsible">
         <!-- Top-aligned buttons -->
         <div class="buttons">
@@ -95,6 +95,7 @@
         </div>
         <div class="bottom-buttons"></div>
     </div>
+    -->
 
     <!-- Hack to ensure that the code editor's web font is loaded early. -->
     <!-- For more info, see note in brackets.less for class .dummy-text, or issue 76 -->
